# authly-sdk-py

./: main.py  pyproject.toml
src/authly-sdk/: client.py  config.py
src/authly-sdk/jwt/: verifier.py
src/authly-sdk/types/: claims.py
src/authly_sdk/: __init__.py  client.pyi
src/authly_sdk/jwt/: __init__.pyi  verifier.pyi
src/authly_sdk/tokens/: verifier.py
src/authly_sdk/types/: __init__.pyi
