[project]
name = "authly-sdk"
version = "0.1.0"
description = "A library for building authentication systems using Authly."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "zeediv", email = "hello@zdv.sh" },
]
dependencies = [
    "pyjwt>=2.10.1",
]
license = { file = "LICENSE" }
